# node-monitor

./: .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
cmd/: root.go
configs/: default.toml
docs/superpowers/plans/: 2026-03-16-go-rewrite.md  2026-04-12-tui-visual-polish.md
docs/superpowers/specs/: 2026-03-16-go-rewrite-design.md  2026-03-16-tui-visual-overhaul-design.md  2026-04-12-tui-visual-polish-design.md
internal/config/: config.go  config_test.go
internal/model/: types.go  types_test.go
internal/slurm/: detect.go  detect_test.go
internal/ssh/: parse.go  parse_test.go  pool.go  query.go
internal/tui/: app.go
internal/tui/components/: gpubar.go  header.go  help.go  hostname.go  hostname_test.go  nodecard.go  nodedetail.go  nodelist.go  proctable.go  styles.go
logs/: findings.md  progress.md
node_monitor/: __init__.py  __main__.py  cli.py  display.py  monitor.py  slurm.py
