[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "node-monitor"
version = "0.1.0"
description = "A beautiful CLI tool for monitoring GPU resources across Slurm cluster nodes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Siyuan"}
]
keywords = ["slurm", "gpu", "monitoring", "cli", "nvidia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
node-monitor = "node_monitor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["node_monitor*"]
